Finishing landing page

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -6,7 +6,7 @@
   font-family: 'Amatic SC', cursive;
   font-weight: 200;
   box-shadow: 0px 1px 3px #2a2a2a;
-  background:url('confectionary.png');
+  background:url('fresh_snow.png');
 }
 
 a.navbar-brand {
@@ -48,4 +48,12 @@ h1, h2, h3, h4, h5, h6, .navbar {
 
 .btn {
   border-radius:0;
+}
+
+body {
+  background: url('fresh_snow.png');
+font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+
+
 }
