--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class = "booyah-box col-xs-10 col-xs-offset-1">
   <h2>Sign up</h2>
   <br />
-  <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+ <%= simple_form_for(resource, as: resource_name, url: user_registration_path) do |f| %>
     <%= devise_error_messages! %>
 
     <div class="field">
