Set up student course show page

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -82,4 +82,5 @@ font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill
   background-color: #FFEEEE;
   border-radius: 3px;
   padding:8px;
+  margin: 10px;
 }
