--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -29,6 +29,7 @@
                   data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
                   data-description="<%= @course.title %> (<%= number_to_currency @course.cost %>)"
                   data-amount="<%= (@course.cost * 100).to_i %>"></script>
+        <% end %>
       <% end %>
     <% end %>
 
@@ -45,7 +46,7 @@
         <h3>
           <%= section.title %>
         </h3>
-        <% section.lessons.each do |lesson| %>
+        <% section.lessons.rank(:row_order).each do |lesson| %>
           <div class="col-xs-12 col-sm-6">
             <div class="lesson text-center">
               <br />
