--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -3,6 +3,20 @@
   <h1 class="text-center"><%= current_course.title %></h1>
   <br />
   <%= image_tag current_course.image, :class => "img-responsive" %>
+  <script>
+    $(function() {
+      $('.lessons').sortable({
+        update: function( event, ui ) {
+          $.ajax({
+            type: 'PUT',
+            url: ui.item.data('update-url'),
+            dataType: 'json',
+            data: { lesson: { row_order_position: ui.item.index() } }
+          });
+        }
+      });
+    });
+  </script>
   <br />
   <%= link_to 'Preview As Student...', course_path(current_course), class: 'btn btn-warning pull-right' %>
   <br class="clr" />
@@ -16,9 +30,9 @@
       <li>
         <%= section.title %>
         <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'pull-right btn btn-primary btn-xs' %>
-       <ul>
+       <ul class="lessons">
           <% section.lessons.rank(:row_order).each do |lesson| %>
-            <li>
+            <li data-update-url="<%= instructor_lesson_path(lesson) %>">
               <b><%= lesson.title %></b>
               -
               <%= lesson.subtitle %>
