--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -19,6 +19,10 @@ li {
   font-size: 20px;
 }
 
+ul {
+  list-style-type: none;
+}
+
 .frosty h1 {
   font-family: 'News Cycle', sans-serif;
   font-weight: 100;
@@ -103,8 +107,44 @@ font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill
   font-size: 25px;
 }
 
+.lessons li {
+  background:black;
+  color:white;
+  margin:10px;
+  font-family: "Helvetica Neue", Helvetica;
+  font-weight: 100;
+  padding:8px;
+  font-size:15px;
+}
+
+.lessons li b {
+  font-size:25px;
+  font-weight: 100;
+}
+
+.lessons li p {
+  margin:0;
+}
+
 .section {
   border: 1px solid;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   padding: 20px;
 }
+
+.section-li {
+  border: 1px solid;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  padding:20px;
+  margin:20px;
+}
+
+ul .header {
+  font-size:25px;
+}
+
+ul .header .glyphicon {
+  font-size:20px;
+}
+
+
