Even more CSS updates

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -15,6 +15,13 @@ a.navbar-brand {
   font-size: 50px;
 }
 
+.logo {
+  color: #2a2a2a;
+  font-size: 50px;
+  font-weight: 200;
+  text-decoration: none;
+}
+
 li {
   font-size: 20px;
 }
