--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -13,7 +13,7 @@ body {
   /* Negative indent footer by its height */
   margin: 0 auto -$footer-height;
   /* Pad bottom by footer height */
-  padding: 0 0 footer-height;
+  /*padding: 0 0 footer-height;*/
 }
 
 /* Set the fixed height of the footer here */
@@ -25,6 +25,7 @@ body {
   font-family: 'Amatic SC', cursive;
   padding:10px 0px;
   margin-top:30px;
+  margin-bottom: 0px;
   font-weight: 100;
 }
 
