--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,8 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-          <a class="navbar-brand" href="#">Flixter</a>
+
+          <a class="navbar-brand" href= "https://flixter-emma-hoffman.herokuapp.com/" >Flixter</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
